--- a/popup.html
+++ b/popup.html
@@ -99,7 +99,7 @@
 <body>
     <h1>Tab Recorder</h1>
 
-    <button id="recordTab" class="record-btn">📱 Record Current Tab</button>
+    <button id="recordTab" class="record-btn">🎞️ Record Current Tab</button>
     <button id="stopRecording" class="record-btn stop-btn">⏹️ Stop Recording</button>
     <div id="status" class="status ready">Ready to record</div>
 
